--- a/index.html
+++ b/index.html
@@ -353,12 +353,19 @@ div.tocify {
 
 <div id="home" class="section level1">
 <h1>Home</h1>
+<p>Welcome to the <em>Ferrari Laboratory</em> website, we are located at the Columbia University Irving Medical Center in New York City, New York.</p>
+<p><br />
+</p>
 <div id="about-us" class="section level2">
 <h2>About Us</h2>
-<p>Lab information here, goals, projects.</p>
+<p>The primnary focus of our laboratory is</p>
+<p><br />
+</p>
 </div>
 <div id="news" class="section level2">
 <h2>News</h2>
+<p><br />
+</p>
 </div>
 <div id="contacts" class="section level2">
 <h2>Contacts</h2>
@@ -369,17 +376,23 @@ Email: gf2375@cumc.columbia.edu</code></pre>
 <div id="twitter" class="section level2">
 <h2>Twitter</h2>
 <p><a href="https://twitter.com/ferrag02" class="uri">https://twitter.com/ferrag02</a></p>
+<p><br />
+</p>
 </div>
 <div id="photos" class="section level2">
 <h2>Photos</h2>
 <center>
 </center>
+<p><br />
+</p>
 </div>
 <div id="internal-links" class="section level2">
 <h2>Internal Links</h2>
 <div id="dashboard" class="section level3">
 <h3>Dashboard</h3>
 <p><a href="about.html">About Us</a></p>
+<p><br />
+</p>
 </div>
 </div>
 <div id="external-links" class="section level2">
@@ -389,6 +402,8 @@ Email: gf2375@cumc.columbia.edu</code></pre>
 <ul>
 <li><a href="https://columbiasurgery.org/research/ferrari-lab">Ferrari Lab – Columbia Biobank for Translational Science</a></li>
 </ul>
+<p><br />
+</p>
 </div>
 </div>
 </div>
