updated text in all pages

--- a/index.html
+++ b/index.html
@@ -325,7 +325,10 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="mailto:&lt;you@youremail.com&gt;">
+  <a href="projects.html">Projects</a>
+</li>
+<li>
+  <a href="mailto:&lt;gf2375@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
@@ -353,12 +356,12 @@ div.tocify {
 
 <div id="home" class="section level1">
 <h1>Home</h1>
-<p>Welcome to the <em>Ferrari Laboratory</em> website, we are located at the Columbia University Irving Medical Center in New York City, New York.</p>
+<p>Welcome to the Ferrari Laboratory website, we are located at the Columbia University Irving Medical Center in New York City, New York.</p>
 <p><br />
 </p>
 <div id="about-us" class="section level2">
 <h2>About Us</h2>
-<p>The primnary focus of our laboratory is</p>
+<p>The primary focus of our laboratory research is</p>
 <p><br />
 </p>
 </div>
@@ -367,15 +370,8 @@ div.tocify {
 <p><br />
 </p>
 </div>
-<div id="contacts" class="section level2">
-<h2>Contacts</h2>
-<pre><code>Giovanni Ferrari PhD
-Address 630W 168th Street 17.413 New York, NY - 10032
-Email: gf2375@cumc.columbia.edu</code></pre>
-</div>
 <div id="twitter" class="section level2">
 <h2>Twitter</h2>
-<p><a href="https://twitter.com/ferrag02" class="uri">https://twitter.com/ferrag02</a></p>
 <p><br />
 </p>
 </div>
@@ -386,19 +382,17 @@ Email: gf2375@cumc.columbia.edu</code></pre>
 <p><br />
 </p>
 </div>
-<div id="internal-links" class="section level2">
-<h2>Internal Links</h2>
-<div id="dashboard" class="section level3">
-<h3>Dashboard</h3>
-<p><a href="about.html">About Us</a></p>
+<div id="links" class="section level2">
+<h2>Links</h2>
+<div id="internal-links" class="section level3">
+<h3>Internal Links</h3>
+<p><a href="about.html">About Us</a><br />
+<a href="projects.html">Projects and Publications</a></p>
 <p><br />
 </p>
 </div>
-</div>
-<div id="external-links" class="section level2">
-<h2>External Links</h2>
-<div id="columbia-university-website" class="section level3">
-<h3>Columbia University Website</h3>
+<div id="external-links" class="section level3">
+<h3>External Links</h3>
 <ul>
 <li><a href="https://columbiasurgery.org/research/ferrari-lab">Ferrari Lab – Columbia Biobank for Translational Science</a></li>
 </ul>
