--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About Us</title>
+<title>Our Projects</title>
 
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -328,7 +328,7 @@ div.tocify {
   <a href="projects.html">Projects</a>
 </li>
 <li>
-  <a href="mailto:&lt;gf2375@cumc.columbia.edu&gt;">
+  <a href="mailto:&lt;you@youremail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
@@ -348,91 +348,84 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">About Us</h1>
+<h1 class="title toc-ignore">Our Projects</h1>
 <h3 class="subtitle"><em>Columbia University Cardiothoracic Surgery Research Program</em></h3>
 
 </div>
 
 
-<div id="our-team" class="section level1">
-<h1>Our Team</h1>
-<div id="primary-investigator" class="section level2">
-<h2>Primary Investigator</h2>
-<p><em>Giovanni Ferrari, PhD</em></p>
-<ul>
-<li><a href="https://twitter.com/ferrag02">Twitter</a></li>
-<li><a href="mailto:%3Cgf2375@cumc.columbia.edu%3E">Email</a></li>
-</ul>
-<p>Associate Professor of Surgical Sciences and Scientific Director of the Cardiothoracic Research Program at Columbia University. He has over 13 years experience in the field of cell biology and cardiovascular medicine. After his postdoctoral work at New York University he became faculty and group leader at University of Pennsylvania, first as Assistant, and later, as Associate Professor. At UPenn he launched the Penn Cardiac Bioregistry for the division of cardiovascular surgery. In 2017 he relocated his program to Columbia. Currently he is directing the Columbia Biobank for Translational Studies (CBTS), an applied human biobank and clinical database supporting translational and precision medicine initiatives. Dr. Ferrari maintains his role as principal investigator of the Penn Cardiac Bioregistry and Adjunct Associate Professor at UPenn.</p>
-<p>Giovanni Ferrari, PhD<br />
-Associate Professor<br />
-Columbia University Department of Surgery<br />
-Director, Cardiothoracic Surgery Research<br />
-Director, Columbia Biobank for Translational Science (CBTS)<br />
-Black Building – 650 W. 168th Street, 4th Floor Suite 4-443<br />
-New York, NY 10032<br />
-Office: (212) 305-8615<br />
-</p>
 <p><br />
 </p>
-<div id="associate-research-scientists" class="section level3">
-<h3>Associate Research Scientists</h3>
+<div id="our-projects-and-publications" class="section level1">
+<h1>Our Projects and Publications</h1>
+<p><br />
+</p>
+<div id="mitral-valve" class="section level2">
+<h2>Mitral Valve</h2>
+<div id="ischemic-mr" class="section level4">
+<h4>Ischemic MR</h4>
+</div>
+<div id="mmvd-and-5ht" class="section level4">
+<h4>MMVD and 5HT</h4>
+<p><br />
+</p>
+</div>
+</div>
+<div id="aortic-valve" class="section level2">
+<h2>Aortic Valve</h2>
+<div id="avsc" class="section level4">
+<h4>AVSc</h4>
+<p><br />
+</p>
+</div>
+</div>
+<div id="aortic-aneurysm-and-dissection" class="section level2">
+<h2>Aortic Aneurysm and Dissection</h2>
+<div id="age" class="section level4">
+<h4>AGE</h4>
+<p><br />
+</p>
+</div>
+<div id="myocardial-remodeling-and-fibrosis" class="section level3">
+<h3>Myocardial Remodeling and Fibrosis</h3>
 <p><em>Esti Castillero, PhD</em></p>
-<ul>
-<li><a href="https:twitter.com/esticastillero">Twitter</a></li>
-</ul>
-<p><em>Chiara Camillo, PhD</em></p>
 <p><br />
 </p>
 </div>
-<div id="postdoctoral-research-fellows" class="section level3">
-<h3>Postdoctoral Research Fellows</h3>
-<p><em>Yingfei Xue, PhD</em></p>
-<p><em>Antonio Frasca, PhD</em></p>
+<div id="implantable-biomaterials-biomedical-engineering" class="section level3">
+<h3>Implantable Biomaterials, Biomedical Engineering</h3>
+<div id="glycation-and-bioprosthethic-heart-valves" class="section level4">
+<h4>Glycation and Bioprosthethic Heart Valves</h4>
+</div>
+<div id="pediatric-implantable-devices" class="section level4">
+<h4>Pediatric Implantable devices</h4>
+<p><em>Valves</em> / <em>Conduits</em></p>
+</div>
+<div id="type-ii-diabetes-mellitus-metabolic-syndrome" class="section level4">
+<h4>Type II Diabetes Mellitus, Metabolic Syndrome</h4>
 <p><br />
 </p>
 </div>
-<div id="surgical-residents" class="section level3">
-<h3>Surgical Residents</h3>
-<p><em>Alexey Abramov, MD</em></p>
-<p><em>Dov Levine, MD</em></p>
-<p><em>Clinton Erwin, MD</em></p>
-<p><em>Michael Simpson, MD</em></p>
+</div>
+<div id="covid-19" class="section level3">
+<h3>COVID-19</h3>
 <p><br />
 </p>
 </div>
-<div id="biobank" class="section level3">
-<h3>Biobank</h3>
-<p><em>Vivian Moreno</em></p>
-<p><br />
-</p>
 </div>
-<div id="lab-manager" class="section level3">
-<h3>Lab Manager</h3>
-<p>Mangesh Kurade</p>
-<p><br />
-</p>
+<div id="collaborations" class="section level2">
+<h2>Collaborations:</h2>
+<div id="levy-lab-upenn" class="section level4">
+<h4>Levy Lab (UPenn)</h4>
 </div>
-<div id="medical-students" class="section level3">
-<h3>Medical Students</h3>
-<p>Nicolo (U of Milan)</p>
-<p>Eduardo (U of Bologna)</p>
-<p>Ervin (Morehouse School of Medicine)</p>
-<p><br />
-</p>
+<div id="kalfa-columbia-university" class="section level4">
+<h4>Kalfa (Columbia University)</h4>
 </div>
-<div id="biomedical-engineering-students" class="section level3">
-<h3>Biomedical Engineering Students</h3>
-<p>Mar Mas Martinez (Columbia U)</p>
-<p><br />
-</p>
+<div id="walter" class="section level4">
+<h4>Walter</h4>
 </div>
-<div id="alumni" class="section level3">
-<h3>Alumni</h3>
-<p>Residents:</p>
-<p><br />
-</p>
-<p>Postdocs:</p>
+<div id="sacks" class="section level4">
+<h4>Sacks</h4>
 </div>
 </div>
 </div>
