--- a/projects.html
+++ b/projects.html
@@ -314,7 +314,7 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Home</a>
+      <a class="navbar-brand" href="index.html">Ferrari Lab Website</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -322,20 +322,20 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="about.html">About</a>
+  <a href="about.html">About Us</a>
 </li>
 <li>
-  <a href="projects.html">Projects</a>
+  <a href="projects.html">Projects and Publications</a>
 </li>
 <li>
-  <a href="mailto:&lt;you@youremail.com&gt;">
-    <span class="fa fa-envelope fa-lg"></span>
+  <a href="https://columbiasurgery.org/heart/">
+    <span class="fa fa-clinic-medical fa-lg"></span>
      
   </a>
 </li>
 <li>
-  <a href="http://github.com/&lt;YOUR_GH_NAME&gt;/">
-    <span class="fa fa-github fa-lg"></span>
+  <a href="mailto:&lt;gf2375@cumc.columbia.edu&gt;">
+    <span class="fa fa-envelope fa-lg"></span>
      
   </a>
 </li>
