--- a/about.html
+++ b/about.html
@@ -329,7 +329,7 @@ div.tocify {
 </li>
 <li>
   <a href="https://columbiasurgery.org/heart/">
-    <span class="fa fa-clinic-medical fa-lg"></span>
+    <span class="fa fa-user-md fa-lg"></span>
      
   </a>
 </li>
@@ -409,30 +409,28 @@ Office: (212) 305-8615<br />
 </div>
 <div id="lab-manager" class="section level3">
 <h3>Lab Manager</h3>
-<p>Mangesh Kurade</p>
+<p><em>Mangesh Kurade</em></p>
 <p><br />
 </p>
 </div>
 <div id="medical-students" class="section level3">
 <h3>Medical Students</h3>
-<p>Nicolo (U of Milan)</p>
-<p>Eduardo (U of Bologna)</p>
-<p>Ervin (Morehouse School of Medicine)</p>
+<p><em>Nicolo (U of Milan)</em></p>
+<p><em>Eduardo (U of Bologna)</em></p>
+<p><em>Ervin (Morehouse School of Medicine)</em></p>
 <p><br />
 </p>
 </div>
 <div id="biomedical-engineering-students" class="section level3">
 <h3>Biomedical Engineering Students</h3>
-<p>Mar Mas Martinez (Columbia U)</p>
+<p><em>Mar Mas Martinez (Columbia University)</em></p>
 <p><br />
 </p>
 </div>
 <div id="alumni" class="section level3">
 <h3>Alumni</h3>
-<p>Residents:</p>
-<p><br />
-</p>
-<p>Postdocs:</p>
+<p>Residents<br />
+Postdocs</p>
 </div>
 </div>
 </div>
