--- a/about.html
+++ b/about.html
@@ -363,7 +363,8 @@ div.tocify {
 <li><a href="https://twitter.com/ferrag02">Twitter</a></li>
 <li><a href="mailto:%3Cgf2375@cumc.columbia.edu%3E">Email</a></li>
 </ul>
-<p>Associate Professor of Surgical Sciences and Scientific Director of the Cardiothoracic Research Program at Columbia University. He has over 13 years experience in the field of cell biology and cardiovascular medicine. After his postdoctoral work at New York University he became faculty and group leader at University of Pennsylvania, first as Assistant, and later, as Associate Professor. At UPenn he launched the Penn Cardiac Bioregistry for the division of cardiovascular surgery. In 2017 he relocated his program to Columbia. Currently he is directing the Columbia Biobank for Translational Studies (CBTS), an applied human biobank and clinical database supporting translational and precision medicine initiatives. Dr. Ferrari maintains his role as principal investigator of the Penn Cardiac Bioregistry and Adjunct Associate Professor at UPenn.</p>
+<p><left> <img src="images/doctor_giovanni_ferrari.jpg" /> </left></p>
+<p><right> Associate Professor of Surgical Sciences and Scientific Director of the Cardiothoracic Research Program at Columbia University. He has over 13 years experience in the field of cell biology and cardiovascular medicine. After his postdoctoral work at New York University he became faculty and group leader at University of Pennsylvania, first as Assistant, and later, as Associate Professor. At UPenn he launched the Penn Cardiac Bioregistry for the division of cardiovascular surgery. In 2017 he relocated his program to Columbia. Currently he is directing the Columbia Biobank for Translational Studies (CBTS), an applied human biobank and clinical database supporting translational and precision medicine initiatives. Dr. Ferrari maintains his role as principal investigator of the Penn Cardiac Bioregistry and Adjunct Associate Professor at UPenn.</p>
 <p>Giovanni Ferrari, PhD<br />
 Associate Professor<br />
 Columbia University Department of Surgery<br />
@@ -373,6 +374,7 @@ Black Building – 650 W. 168th Street, 4th Floor Suite 4-443<br />
 New York, NY 10032<br />
 Office: (212) 305-8615<br />
 </p>
+<p></right></p>
 <p><br />
 </p>
 <div id="associate-research-scientists" class="section level3">
