--- a/projects.html
+++ b/projects.html
@@ -329,7 +329,7 @@ div.tocify {
 </li>
 <li>
   <a href="https://columbiasurgery.org/heart/">
-    <span class="fa fa-clinic-medical fa-lg"></span>
+    <span class="fa fa-user-md fa-lg"></span>
      
   </a>
 </li>
