new sites for biobank and program training

--- a/biobank.html
+++ b/biobank.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Ferrari Lab</title>
+<title>Biobank</title>
 
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -354,57 +354,16 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Ferrari Lab</h1>
-<h3 class="subtitle">Columbia University Cardiothoracic Surgery Research Program</h3>
+<h1 class="title toc-ignore">Biobank</h1>
+<h3 class="subtitle"><em>Columbia University Cardiothoracic Surgery Research Program</em></h3>
 
 </div>
 
 
-<div id="home" class="section level1">
-<h1>Home</h1>
-<p>Welcome to the Ferrari Laboratory website, we are located at the Columbia University Irving Medical Center in New York City, New York.</p>
-<p><br />
-</p>
-<div id="about-us" class="section level2">
-<h2>About Us</h2>
-<p>The primary focus of our laboratory research is</p>
-<p><br />
-</p>
-</div>
-<div id="news" class="section level2">
-<h2>News</h2>
-<p><br />
-</p>
-</div>
-<div id="twitter" class="section level2">
-<h2>Twitter</h2>
-<p><br />
-</p>
-</div>
-<div id="photos" class="section level2">
-<h2>Photos</h2>
-<center>
-</center>
-<p><br />
-</p>
-</div>
-<div id="links" class="section level2">
-<h2>Links</h2>
-<div id="internal-links" class="section level3">
-<h3>Internal Links</h3>
-<p><a href="about.html">About Us</a><br />
-<a href="projects.html">Projects and Publications</a></p>
-<p><br />
-</p>
-</div>
-<div id="external-links" class="section level3">
-<h3>External Links</h3>
-<ul>
-<li><a href="https://columbiasurgery.org/research/ferrari-lab">Ferrari Lab – Columbia Biobank for Translational Science</a></li>
-</ul>
-<p><br />
-</p>
-</div>
+<div id="biobank-cbts" class="section level1">
+<h1>Biobank (CBTS)</h1>
+<div id="inquiry-form" class="section level2">
+<h2>Inquiry Form</h2>
 </div>
 </div>
 
