--- a/projects.html
+++ b/projects.html
@@ -328,6 +328,12 @@ div.tocify {
   <a href="projects.html">Projects and Publications</a>
 </li>
 <li>
+  <a href="biobank.html">Biobank Inquiries</a>
+</li>
+<li>
+  <a href="program.html">Research Training Program</a>
+</li>
+<li>
   <a href="https://columbiasurgery.org/heart/">
     <span class="fa fa-user-md fa-lg"></span>
      
