updated text in website

--- a/index.html
+++ b/index.html
@@ -405,15 +405,23 @@ div.tocify {
 <div id="internal-links" class="section level3">
 <h3>Internal Links</h3>
 <p><a href="about.html">About Us</a><br />
-<a href="projects.html">Projects and Publications</a></p>
+</p>
+<p><a href="projects.html">Projects and Publications</a><br />
+</p>
+<p><a href="biobank.html">Biobank Inquiries</a><br />
+</p>
+<p><a href="program.html">Research Program for Residents</a><br />
+</p>
 <p><br />
 </p>
 </div>
 <div id="external-links" class="section level3">
 <h3>External Links</h3>
-<ul>
-<li><a href="https://columbiasurgery.org/research/ferrari-lab">Ferrari Lab – Columbia Biobank for Translational Science</a></li>
-</ul>
+<p><a href="https://columbiasurgery.org/research/ferrari-lab">Ferrari Lab – Columbia Biobank for Translational Science</a><br />
+</p>
+<p><a href="https://columbiasurgery.org/heart">Columbia Cardiac Surgery</a><br />
+</p>
+<p><a href="https://columbiasurgery.org/general-surgery-residency">Columbia Surgery Residency Program</a></p>
 <p><br />
 </p>
 </div>
