--- a/about.html
+++ b/about.html
@@ -435,7 +435,7 @@ Office: (212) 305-8615<br />
 </div>
 <div id="medical-students" class="section level3">
 <h3>Medical Students</h3>
-<p><em>Nicolo (U of Milan)</em></p>
+<p><em>Nicolo Vitale (U of Milan)</em></p>
 <p><em>Eduardo (U of Bologna)</em></p>
 <p><em>Ervin (Morehouse School of Medicine)</em></p>
 <p><br />
@@ -443,7 +443,7 @@ Office: (212) 305-8615<br />
 </div>
 <div id="biomedical-engineering-students" class="section level3">
 <h3>Biomedical Engineering Students</h3>
-<p><em>Mar Mas Martinez (Columbia University)</em></p>
+<p><em>Mar Martinez Mas (Columbia University)</em></p>
 <p><br />
 </p>
 </div>
