updated bio and photos

--- a/about.html
+++ b/about.html
@@ -409,6 +409,10 @@ div.tocify {
 <div id="surgical-residents" class="section level3">
 <h3>Surgical Residents</h3>
 <p><em>Alexey Abramov, MD</em></p>
+<p><img src="images/abramov.jpg" style="width:25.0%" /></p>
+<p>I am a General Surgery resident in the <a href="https://columbiasurgery.org/general-surgery-residency">New York Presbyterian-Columbia</a> program with an interest a fellowship in cardiothoracic surgery. Currently, I am a post-doctoral research fellow in Dr. Ferrari’s lab in the <a href="https://columbiasurgery.org/cardiothoracic-surgery-research/program-overview">Cardiothoracic Surgery Research Group</a> and pursuing a Master’s of Science degree in the Department of Biostatistics in the Mailmans School of Public Health with a concentration in <a href="https://www.publichealth.columbia.edu/academics/degrees/master-science/clinical-research-methods">Clinical Research Methods</a>.</p>
+<p>In my free time, I enjoy the outdoors, hiking, skiing, and riding my road bike.</p>
+<p><a href="mailto:%3Caa3832@cumc.columbia.edu%3E">Email</a></p>
 <p><em>Dov Levine, MD</em></p>
 <p><em>Clinton Erwin, MD</em></p>
 <p><em>Michael Simpson, MD</em></p>
@@ -430,6 +434,7 @@ div.tocify {
 <div id="medical-students" class="section level3">
 <h3>Medical Students</h3>
 <p><em>Nicolo Vitale (U of Milan)</em></p>
+<p><img src="images/niko.jpg" style="width:25.0%" /></p>
 <p><em>Eduardo (U of Bologna)</em></p>
 <p><em>Ervin (Morehouse School of Medicine)</em></p>
 <p><br />
